--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,28 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#F42768"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="146dp"
-        android:layout_height="52dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="Resultado:"
-        android:textSize="24sp" />
-
-    <EditText
-        android:id="@+id/resultado"
-        android:layout_width="144dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:ems="10"
-        android:inputType="textPersonName" />
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="146dp"
+            android:layout_height="52dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Resultado:"
+            android:textSize="24sp" />
+
+        <EditText
+            android:id="@+id/resultado"
+            android:layout_width="144dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:ems="10"
+            android:inputType="textPersonName" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="181dp"
+        android:layout_height="366dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -33,16 +42,22 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/sumar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:backgroundTint="#FF0009"
+                android:text="Suma" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="45dp" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/multiplicar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:backgroundTint="#D6104F"
+                android:text="Multiplicacion" />
         </LinearLayout>
 
         <Space
@@ -51,22 +66,28 @@
             android:layout_weight="1" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="168dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/restar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:backgroundTint="#19FB00"
+                android:text="Resta" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="48dp" />
 
             <Button
-                android:id="@+id/button8"
+                android:id="@+id/dividir"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:backgroundTint="#B5C10D"
+                android:text="División" />
         </LinearLayout>
     </LinearLayout>
 
@@ -76,7 +97,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="155dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -84,7 +105,9 @@
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="62dp"
-                android:text="Operando1:" />
+                android:text="Operando1:"
+                android:textAlignment="center"
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName2"
@@ -102,9 +125,18 @@
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:text="Operando2:"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <EditText
+                android:id="@+id/editTextTextPersonName"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Operando2:" />
+                android:ems="10"
+                android:inputType="textPersonName" />
         </LinearLayout>
     </LinearLayout>
 
