--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,78 +23,33 @@
 
         <EditText
             android:id="@+id/resultado"
-            android:layout_width="144dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:ems="10"
             android:inputType="textPersonName"
-            android:textAlignment="center"
-            android:textSize="20sp" />
+            android:textAlignment="center" />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="366dp"
+        android:layout_height="268dp"
         android:orientation="horizontal">
 
-        <LinearLayout
+        <Spinner
+            android:id="@+id/spinner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/sumar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#FF0009"
-                android:onClick="suma"
-                android:text="Suma" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="45dp" />
-
-            <Button
-                android:id="@+id/multiplicar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#D6104F"
-                android:onClick="multiplicacion"
-                android:text="Multiplicacion" />
-        </LinearLayout>
-
-        <Space
-            android:layout_width="3dp"
-            android:layout_height="wrap_content"
+            android:layout_height="82dp"
             android:layout_weight="1" />
 
-        <LinearLayout
-            android:layout_width="168dp"
+        <Button
+            android:id="@+id/operar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/restar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#19FB00"
-                android:onClick="resta"
-                android:text="Resta" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="48dp" />
-
-            <Button
-                android:id="@+id/dividir"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#B5C10D"
-                android:onClick="division"
-                android:text="División" />
-        </LinearLayout>
+            android:layout_weight="1"
+            android:onClick="operaciones"
+            android:text="Operar" />
     </LinearLayout>
 
     <LinearLayout
@@ -117,10 +72,10 @@
 
             <EditText
                 android:id="@+id/operando1"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textAlignment="center" />
 
         </LinearLayout>
@@ -141,10 +96,10 @@
 
             <EditText
                 android:id="@+id/operando2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textAlignment="center" />
 
         </LinearLayout>
